[Refacter]change korea file name to english - 한글인 경우 인식 못함

--- a/index.html
+++ b/index.html
@@ -629,31 +629,31 @@
                             </div>
                             <div class="modal-body">
                               <img
-                                src="assets/img/award/청년스타트업어워즈_대상_0원 (2).jpg"
+                                src="assets/img/award/startupAward.jpg"
                                 class="modal-img"
                                 alt=""
                                 style="width: 80%; height: 80%"
                               />
                               <img
-                                src="assets/img/award/경기도 창업경진 대상 수료증.jpeg"
+                                src="assets/img/award/gyeonggiAward.jpeg"
                                 class="modal-img"
                                 alt=""
                                 style="width: 80%; height: 80%"
                               />
                               <img
-                                src="assets/img/award/흑석캠퍼스타운대상.jpg"
+                                src="assets/img/award/campusTownAward.jpg"
                                 class="modal-img"
                                 alt=""
                                 style="width: 80%; height: 80%"
                               />
                               <img
-                                src="assets/img/award/스마트시티즌 최우수상 (2).jpeg"
+                                src="assets/img/award/smartCitizenAward.jpeg"
                                 class="modal-img"
                                 alt=""
                                 style="width: 80%; height: 80%"
                               />
                               <img
-                                src="assets/img/award/190927_과기대_창업_은상_만원.jpg"
+                                src="assets/img/award/STU_Award.jpg"
                                 class="modal-img"
                                 alt=""
                                 style="width: 80%; height: 80%"
@@ -1173,13 +1173,13 @@
                             </div>
                             <div class="modal-body">
                               <img
-                                src="assets/img/certificate/정보처리기사.png"
+                                src="assets/img/certificate/InformationProcessingEngineer.png"
                                 class="modal-img"
                                 alt="정보처리기사 자격증"
                                 style="width: 80%; height: 80%"
                               />
                               <img
-                                src="assets/img/certificate/정보처리산업기사.png"
+                                src="assets/img/certificate/InformationProcessingIndustryEngineer.png"
                                 class="modal-img"
                                 alt="정보처리기사산업기사 자격증"
                                 style="width: 80%; height: 80%"
@@ -1255,7 +1255,7 @@
                             </div>
                             <div class="modal-body">
                               <img
-                                src="assets/img/certificate/정보기기운용기능사.png"
+                                src="assets/img/certificate/InformationEquipmentManagementTechnician.png"
                                 class="modal-img"
                                 alt="정보기기운용기능사 자격증"
                                 style="width: 80%; height: 80%"
