[Refactor] Toy project section update - 프로젝트 정리 및 다시 시작

--- a/index.html
+++ b/index.html
@@ -376,17 +376,15 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th class="table-title" scope="col">딥러닝 : HyperData</th>
+                    <th class="table-title" scope="col">ToDo</th>
                     <td>
                       <div>
-                        [티맥스] 시각화 대시보드 : 오픈소스 라이브러리를 이용한
-                        시각화 대시보드
+                         ToDo : Meaningful Project
                       </div>
                       <div>
-                        #HyperData #Plotly.js #Tabulator.js #SunEditor.js
-                        #InterAction.js
+                        #Latest #OpenSource #Toy #Complete
                       </div>
-                      <div>
+                      <!--<div>
                         <span class="badge bg-inprogress">In Progress</span>
                         <span class="badge bg-grey">React</span>
                         <span class="badge bg-grey">Mobx</span>
@@ -394,10 +392,10 @@
                         <span class="badge bg-grey">Node.js</span>
                         <span class="badge bg-grey">Plotly.js</span>
                         <span class="badge bg-grey">Babel</span>
-                      </div>
+                      </div> -->
                     </td>
                     <td class="text-center">
-                      <div class="">( 20/02~ current)</div>
+                      <div class="">( now ~ )</div>
                       <div class="progress">
                         <div
                           class="progress-bar progress-bar-striped progress-bar-animated"
@@ -406,129 +404,9 @@
                           <span class="progress-desc">개발중</span>
                         </div>
                       </div>
-                      <div class="progress-desc">프론트 앤드 시각화파트</div>
+                      <div class="progress-desc">Only myself</div>
                     </td>
-                    <td class="text-center">
-                      <span class="text-muted">
-                        <i class="bi bi-file-earmark-slides"></i>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th class="table-title" scope="col">
-                      통합 모빌리티 서비스 : 카찹
-                    </th>
-                    <td>
-                      <div>
-                        [카찹] 통합 모빌리티 서비스 : 다양하게 분산되어 있는
-                        모빌리티 서비스를 한 곳에서 통합 검색->결제->반납의
-                        서비스를 제공합니다.
-                      </div>
-                      <div>
-                        #통합모빌리티 #공유서비스 #대중교통 #가격 비교
-                        #지도서비스 #스타트업 #Co-founder
-                      </div>
-                      <div>
-                        <span class="badge bg-done">Done</span>
-                        <span class="badge bg-grey">Android</span>
-                        <span class="badge bg-grey">Java</span>
-                        <span class="badge bg-grey">REST API</span>
-                        <span class="badge bg-grey">GOOGLE MAP</span>
-                        <span class="badge bg-grey">SOCAIAL LOGIN</span>
-                        <span class="badge bg-grey">FIREBASE</span>
-                      </div>
-                    </td>
-                    <td class="text-center">
-                      <div class="">( 18/12~ 20/02)</div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar progress-bar-striped bg-info"
-                          style="width: 100%"
-                        >
-                          <span class="progress-desc">개발 완료</span>
-                        </div>
-                      </div>
-                      <div class="progress-desc">안드로이드 앱 개발</div>
-                    </td>
-                    <td class="text-center">
-                      <span
-                        class="text-muted"
-                        data-bs-toggle="modal"
-                        data-bs-target="#Modal1"
-                      >
-                        <i class="bi bi-file-earmark-slides"></i>
-                        <div
-                          class="modal fade"
-                          id="Modal1"
-                          tabindex="-1"
-                          aria-labelledby="Modal1Label"
-                          aria-hidden="true"
-                        >
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="Modal1Label">
-                                  통합 모빌리티 서비스 : 카찹
-                                </h5>
-                                <button
-                                  type="button"
-                                  class="btn-close"
-                                  data-bs-dismiss="modal"
-                                  aria-label="Close"
-                                ></button>
-                              </div>
-                              <div class="modal-body">
-                                <video
-                                  muted
-                                  autoplay
-                                  loop
-                                  width="100%"
-                                  height="100%"
-                                >
-                                  <source
-                                    src="assets/video/carchap_service.mp4"
-                                    type="video/mp4"
-                                  />
-                                  <strong
-                                    >Your browser does not support the video
-                                    tag.</strong
-                                  >
-                                </video>
-                                <p class="modal-desc">
-                                  <br />서비스 개요 : 파편화된 모빌리티 서비스를
-                                  한 곳에서 <br />사용 언어 : 자바, 코틀린
-                                  <br />사용 라이브러리 : Google Map. Firebase,
-                                  Social Login, etc.. <br />개발 기여도 :
-                                  안드로이드 앱 개발(단독) <br />개발 기간 : 1년
-                                  6개월 <br />앱 링크 :
-                                  <a
-                                    href="https://play.google.com/store/apps/details?id=org.techtown.carchap_v11&hl=ko&gl=US"
-                                    class="btn btn-google"
-                                    target="_blank"
-                                    >Google Play Store</a
-                                  >
-                                  <a
-                                    href="https://apps.apple.com/us/app/%EC%B9%B4%EC%B0%B9-%EC%9D%B4%EB%8F%99%EC%88%98%EB%8B%A8-%ED%86%B5%ED%95%A9-%ED%94%8C%EB%9E%AB%ED%8F%BC/id1506198003"
-                                    class="btn btn-google"
-                                    target="_blank"
-                                    >App Store</a
-                                  >
-                                </p>
-                              </div>
-                              <div class="modal-footer">
-                                <button
-                                  type="button"
-                                  class="btn btn-secondary"
-                                  data-bs-dismiss="modal"
-                                >
-                                  Close
-                                </button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </span>
-                    </td>
+
                   </tr>
                 </tbody>
               </table>
