--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div>
         <div class="container" style="display: flex">
           <div style="flex: 2">
-            <h1>FrondEnd</h1>
-            <h1>개발자 <strong>강경석</strong> 입니다</h1>
+            <h1>FrondEnd Developer,</h1>
+            <h2>강경석 입니다.
           </div>
           <div style="flex: 1">
             <img
