[Refactor] header text 폰트 및 flex 수정

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header 시작 -->
     <header>
       <div>
-        <div class="container" style="display: flex">
+        <div class="container" style="display: flex; justify-content: center; flex-flow: wrap;">
           <div style="flex: 2">
             <h1>FrondEnd Developer,</h1>
             <h2>강경석 입니다.
