[New Feature] 클릭시 소리재생하는 기능 추가 구현

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
         <div class="collapse navbar-collapse sticky-fixed" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#intro">intro</a>
+              <a class="nav-link click-alarm" href="#intro">intro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#project">Project</a>
+              <a class="nav-link click-alarm" href="#project">Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#awards">Awards</a>
+              <a class="nav-link click-alarm" href="#awards">Awards</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#stacks">Stacks</a>
+              <a class="nav-link click-alarm" href="#stacks">Stacks</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#certificate">Certificate</a>
+              <a class="nav-link click-alarm" href="#certificate">Certificate</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link click-alarm" href="#contact">Contact</a>
             </li>
           </ul>
           <form class="d-flex"></form>
@@ -1235,6 +1235,7 @@
       <!-- Contact 끝  -->
     </main>
     <!-- Main 끝 -->
+    <audio id="switch_alarm" src="assets/audio/switch_alarm.mp3" value="PLAY"></audio>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
