[New feature] 스크롤에 따라 fade in하는 스타일 구현

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- Header 시작 -->
     <header></header>
-    <!-- Header 끝 -->
+    <!-- Header 끝 -->    
     <!-- Navbar 시작 -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid text-uppercase">
@@ -75,7 +75,7 @@
     <main>
       <!-- intro 시작 -->
 
-      <section class="container pt mt" id="intro">
+      <section class="container pt mt fade" id="intro">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
           <div class="section-desc fonsiz-ori color-basic-opac letsp-sm ws-xs mt-2 mb-4">
@@ -340,7 +340,7 @@
         </div>
       </section>
       <!-- 연차별 업무 진행-->
-      <section class="container pt" id="annualizedWork">
+      <section class="container pt fade" id="annualizedWork">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Annualized work</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           연차별로 중점적으로 했던 업무를 한줄로 간략히 정리해보았습니다.
@@ -412,7 +412,7 @@
       </section>
       <!-- Project 끝 -->
       <!-- Awards 시작 -->
-      <section class="container pt mt" id="awards">
+      <section class="container pt mt fade" id="awards">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Awards</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           다양한 사람들과 협업을 통해서 함께 공동의 목표를 성취해 나가는 것에 관심이 많습니다. 실패를 겁내지 않고
@@ -665,7 +665,7 @@
       </section>
       <!-- Awards 끝-->
       <!-- Stack 시작-->
-      <section class="container pt mt mb-5" id="stacks">
+      <section class="container pt mt mb-5 fade" id="stacks">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Stacks</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           T자형 지식을 추구합니다. 다만 지금은 수직, 수평적인 지식을 둘다 키워야하는 주니어로써 다양한 기술, 언어를
@@ -838,7 +838,7 @@
           </div>
         </div>
       </section>
-      <section id="charts" class="container">
+      <section id="charts fade" class="container">
         <div class="row">
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
@@ -903,7 +903,7 @@
       </section>
       <!-- Stack 끝-->
       <!-- certificate 시작-->
-      <section class="container pt mt" id="certificate">
+      <section class="container pt mt fade" id="certificate">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Certificate</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           자격증이 실력의 척도가 될 수는 없습니다. 하지만 관심과 꾸준함에 대한 척도는 될 수 있다고 생각합니다.
@@ -1118,14 +1118,14 @@
       </section>
       <!-- certificate 끝  -->
       <!-- contact 시작  -->
-      <section class="container pt mt" id="contact">
+      <section class="container pt mt fade" id="contact">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center mb-5">
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Contact</h2>
           </div>
         </div>
       </section>
-      <section class="container backimg">
+      <section class="container backimg fade">
         <div class="name-card d-flex justify-content-center">
           <div class="contact-body shadow">
             <div class="text-center mb-4">
