[Bug fix] 스크롤에 따라 fade in하는 스타일 구현
- margin 에서 left로 변경

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- Header 시작 -->
     <header></header>
-    <!-- Header 끝 -->    
+    <!-- Header 끝 -->
     <!-- Navbar 시작 -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid text-uppercase">
@@ -239,7 +239,7 @@
           </div>
         </div>
       </section>
-      <section class="container pt" id="toyProject">
+      <section class="container pt fade" id="toyProject">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Toy Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           업무 외에 배우고 싶은 기술, 언어를 사용해보며 나아가고 있습니다.
@@ -837,9 +837,7 @@
             </div>
           </div>
         </div>
-      </section>
-      <section id="charts fade" class="container">
-        <div class="row">
+        <div class="row" style="margin-top: 30px">
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
             <div class="card mb-3">
               <div id="chart_frondEnd"></div>
